# immich-trip-albums

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup-env.sh
docs/superpowers/plans/: 2026-06-28-immich-trip-albums.md
docs/superpowers/specs/: 2026-06-28-immich-trip-albums-design.md
tests/: conftest.py  fixtures.py  test_adjudicate.py  test_apply.py  test_classify.py  test_cli.py  test_cluster.py  test_config.py  test_escalate.py  test_geo.py  test_immich.py  test_models.py  test_naming.py  test_planner.py
trip_albums/: __init__.py  adjudicate.py  apply.py  classify.py  cli.py  cluster.py  config.py  escalate.py  geo.py  immich.py  models.py  naming.py  planner.py  render.py
