[project]
name = "trip-albums"
version = "0.1.0"
description = "Cluster away-from-home Immich photos/videos into trip albums"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
trip-albums = "trip_albums.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trip_albums"]

[tool.pytest.ini_options]
testpaths = ["tests"]
